[gd_scene load_steps=3 format=2]

[ext_resource path="res://tools/np_profiler/profile_log_viewer.gd" type="Script" id=1]
[ext_resource path="res://tools/np_profiler/frame_button.tscn" type="PackedScene" id=2]

[node name="profile_log_viewer" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
frame_button_template = ExtResource( 2 )

[node name="log_viewer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="buttons" type="HBoxContainer" parent="log_viewer"]
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="file" type="MenuButton" parent="log_viewer/buttons"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"
items = [ "Open", null, 0, false, false, 0, 0, null, "", false ]

[node name="spacer" type="Control" parent="log_viewer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 20 )

[node name="menus" type="HBoxContainer" parent="log_viewer"]
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="stats" type="VBoxContainer" parent="log_viewer/menus"]
margin_right = 264.0
margin_bottom = 552.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35

[node name="frame" type="Label" parent="log_viewer/menus/stats"]
margin_right = 264.0
margin_bottom = 14.0
text = "Frame Stats"

[node name="time" type="Label" parent="log_viewer/menus/stats"]
margin_top = 18.0
margin_right = 264.0
margin_bottom = 32.0
text = "Total Time:"

[node name="func_tree" type="Tree" parent="log_viewer/menus/stats"]
margin_top = 36.0
margin_right = 264.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="scroll" type="ScrollContainer" parent="log_viewer/menus"]
margin_left = 268.0
margin_right = 1024.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="frames" type="HBoxContainer" parent="log_viewer/menus/scroll"]
margin_right = 756.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -553.5
margin_top = -316.0
margin_right = 553.5
margin_bottom = 316.0
window_title = "Open a File"
mode = 0
access = 1
root_subfolder = "logs"

[connection signal="file_selected" from="FileDialog" to="." method="_on_file_selected"]
